tdf#152817 SwSpellDialogChildWindow: remove irritating OSL_ENSURE

These are assert alternatives, right?
Well, it asserts something that is not (and cannot easily be) true.
So just remove this 2004 code development helper assert.

Change-Id: I88e1b01aaa6cb6a51e289c1b024815e504300392
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191574
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>